--- a/src/app/components/chefforders/chefforders.page.html
+++ b/src/app/components/chefforders/chefforders.page.html
@@ -1,13 +1,346 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>chefforders</ion-title>
-  </ion-toolbar>
-</ion-header>
+<div class="admin-dashboard">
+  <!-- SIDEBAR -->
+  <section id="sidebar">
+    <a class="brand">
+      <img src="https://www.straunt.ai/wp-content/uploads/2024/04/Vector2.png" style="height: 35px;">
+      <span class="text">Bhagona</span>
+    </a>
+    <ul class="side-menu top">
+       <li class="active">
+        <a>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">chefforders</ion-title>
-    </ion-toolbar>
-  </ion-header>
-</ion-content>
+          <svg class="bx bxs-message-dots bx-sm" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+            viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M4.083 11.894c.439-2.34.658-3.511 1.491-4.203C6.408 7 7.598 7 9.98 7h4.04c2.383 0 3.573 0 4.407.691c.833.692 1.052 1.862 1.491 4.203l.75 4c.617 3.292.926 4.938.026 6.022S18.12 23 14.771 23H9.23c-3.349 0-5.024 0-5.923-1.084c-.9-1.084-.591-2.73.026-6.022z"
+              opacity=".5"></path>
+            <path fill="currentColor"
+              d="M9.75 5.985a2.25 2.25 0 0 1 4.5 0v1c.566 0 1.062.002 1.5.015V5.985a3.75 3.75 0 1 0-7.5 0V7c.438-.013.934-.015 1.5-.015zm.128 9.765a2.251 2.251 0 0 0 4.245 0a.75.75 0 1 1 1.414.5a3.751 3.751 0 0 1-7.073 0a.75.75 0 0 1 1.414-.5">
+            </path>
+          </svg>
+          <span class="text">Orders</span>
+        </a>
+      </li>
+      <li>
+        <a>
+
+          <svg class="bx bxs-doughnut-chart bx-sm" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+            viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M8.422 20.618C10.178 21.54 11.056 22 12 22V12L2.638 7.073l-.04.067C2 8.154 2 9.417 2 11.942v.117c0 2.524 0 3.787.597 4.801c.598 1.015 1.674 1.58 3.825 2.709z">
+            </path>
+            <path fill="currentColor"
+              d="m17.577 4.432l-2-1.05C13.822 2.461 12.944 2 12 2c-.945 0-1.822.46-3.578 1.382l-2 1.05C4.318 5.536 3.242 6.1 2.638 7.072L12 12l9.362-4.927c-.606-.973-1.68-1.537-3.785-2.641"
+              opacity=".7"></path>
+            <path fill="currentColor"
+              d="m21.403 7.14l-.041-.067L12 12v10c.944 0 1.822-.46 3.578-1.382l2-1.05c2.151-1.129 3.227-1.693 3.825-2.708c.597-1.014.597-2.277.597-4.8v-.117c0-2.525 0-3.788-.597-4.802"
+              opacity=".5"></path>
+            <path fill="currentColor"
+              d="m6.323 4.484l.1-.052l1.493-.784l9.1 5.005l4.025-2.011q.205.232.362.498c.15.254.262.524.346.825L17.75 9.964V13a.75.75 0 0 1-1.5 0v-2.286l-3.5 1.75v9.44A3 3 0 0 1 12 22c-.248 0-.493-.032-.75-.096v-9.44l-8.998-4.5c.084-.3.196-.57.346-.824q.156-.266.362-.498l9.04 4.52l3.387-1.693z">
+            </path>
+          </svg>
+          <span class="text">Inventory</span>
+        </a>
+      </li>
+     
+      <li>
+        <a>
+
+          <svg class='bx bxs-group bx-sm' xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+            viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M7.245 2h9.51c1.159 0 1.738 0 2.206.163a3.05 3.05 0 0 1 1.881 1.936C21 4.581 21 5.177 21 6.37v14.004c0 .858-.985 1.314-1.608.744a.946.946 0 0 0-1.284 0l-.483.442a1.657 1.657 0 0 1-2.25 0a1.657 1.657 0 0 0-2.25 0a1.657 1.657 0 0 1-2.25 0a1.657 1.657 0 0 0-2.25 0a1.657 1.657 0 0 1-2.25 0l-.483-.442a.946.946 0 0 0-1.284 0c-.623.57-1.608.114-1.608-.744V6.37c0-1.193 0-1.79.158-2.27c.3-.913.995-1.629 1.881-1.937C5.507 2 6.086 2 7.245 2"
+              opacity=".5"></path>
+            <path fill="currentColor"
+              d="M7 6.75a.75.75 0 0 0 0 1.5h.5a.75.75 0 0 0 0-1.5zm3.5 0a.75.75 0 0 0 0 1.5H17a.75.75 0 0 0 0-1.5zM7 10.25a.75.75 0 0 0 0 1.5h.5a.75.75 0 0 0 0-1.5zm3.5 0a.75.75 0 0 0 0 1.5H17a.75.75 0 0 0 0-1.5zM7 13.75a.75.75 0 0 0 0 1.5h.5a.75.75 0 0 0 0-1.5zm3.5 0a.75.75 0 0 0 0 1.5H17a.75.75 0 0 0 0-1.5z">
+            </path>
+          </svg>
+          <span class="text">Invoices </span>
+        </a>
+      </li>
+
+      <li>
+        <a>
+          <svg class='bx bxs-group bx-sm' xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+            viewBox="0 0 24 24">
+            <path fill="currentColor" d="M15.5 7.5a3.5 3.5 0 1 1-7 0a3.5 3.5 0 0 1 7 0"></path>
+            <path fill="currentColor"
+              d="M19.5 7.5a2.5 2.5 0 1 1-5 0a2.5 2.5 0 0 1 5 0m-15 0a2.5 2.5 0 1 0 5 0a2.5 2.5 0 0 0-5 0" opacity=".4">
+            </path>
+            <path fill="currentColor" d="M18 16.5c0 1.933-2.686 3.5-6 3.5s-6-1.567-6-3.5S8.686 13 12 13s6 1.567 6 3.5">
+            </path>
+            <path fill="currentColor"
+              d="M22 16.5c0 1.38-1.79 2.5-4 2.5s-4-1.12-4-2.5s1.79-2.5 4-2.5s4 1.12 4 2.5m-20 0C2 17.88 3.79 19 6 19s4-1.12 4-2.5S8.21 14 6 14s-4 1.12-4 2.5"
+              opacity=".4"></path>
+          </svg>
+          <span class="text">Customers </span>
+        </a>
+      </li>
+      <li>
+        <a>
+
+          <svg class='bx bxs-group bx-sm' xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+            viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="m13.629 20.472l-.542.916c-.483.816-1.69.816-2.174 0l-.542-.916c-.42-.71-.63-1.066-.968-1.262c-.338-.197-.763-.204-1.613-.219c-1.256-.021-2.043-.098-2.703-.372a5 5 0 0 1-2.706-2.706C2 14.995 2 13.83 2 11.5v-1c0-3.273 0-4.91.737-6.112a5 5 0 0 1 1.65-1.651C5.59 2 7.228 2 10.5 2h3c3.273 0 4.91 0 6.113.737a5 5 0 0 1 1.65 1.65C22 5.59 22 7.228 22 10.5v1c0 2.33 0 3.495-.38 4.413a5 5 0 0 1-2.707 2.706c-.66.274-1.447.35-2.703.372c-.85.015-1.275.022-1.613.219c-.338.196-.548.551-.968 1.262"
+              opacity=".5"></path>
+            <path fill="currentColor"
+              d="M10.99 14.308c-1.327-.978-3.49-2.84-3.49-4.593c0-2.677 2.475-3.677 4.5-1.609c2.025-2.068 4.5-1.068 4.5 1.609c0 1.752-2.163 3.615-3.49 4.593c-.454.335-.681.502-1.01.502s-.556-.167-1.01-.502">
+            </path>
+          </svg>
+          <span class="text">Reviews </span>
+        </a>
+      </li>
+    </ul>
+    <ul class="side-menu bottom">
+      <!-- <li>
+                <a>
+
+                    <svg class='bx bxs-cog bx-sm bx-spin-hover' xmlns="http://www.w3.org/2000/svg" width="1em"
+                        height="1em" viewBox="0 0 24 24">
+                        <path fill="currentColor" fill-rule="evenodd"
+                            d="M14.279 2.152C13.909 2 13.439 2 12.5 2s-1.408 0-1.779.152a2 2 0 0 0-1.09 1.083c-.094.223-.13.484-.145.863a1.62 1.62 0 0 1-.796 1.353a1.64 1.64 0 0 1-1.579.008c-.338-.178-.583-.276-.825-.308a2.03 2.03 0 0 0-1.49.396c-.318.242-.553.646-1.022 1.453c-.47.807-.704 1.21-.757 1.605c-.07.526.074 1.058.4 1.479c.148.192.357.353.68.555c.477.297.783.803.783 1.361s-.306 1.064-.782 1.36c-.324.203-.533.364-.682.556a2 2 0 0 0-.399 1.479c.053.394.287.798.757 1.605s.704 1.21 1.022 1.453c.424.323.96.465 1.49.396c.242-.032.487-.13.825-.308a1.64 1.64 0 0 1 1.58.008c.486.28.774.795.795 1.353c.015.38.051.64.145.863c.204.49.596.88 1.09 1.083c.37.152.84.152 1.779.152s1.409 0 1.779-.152a2 2 0 0 0 1.09-1.083c.094-.223.13-.483.145-.863c.02-.558.309-1.074.796-1.353a1.64 1.64 0 0 1 1.579-.008c.338.178.583.276.825.308c.53.07 1.066-.073 1.49-.396c.318-.242.553-.646 1.022-1.453c.47-.807.704-1.21.757-1.605a2 2 0 0 0-.4-1.479c-.148-.192-.357-.353-.68-.555c-.477-.297-.783-.803-.783-1.361s.306-1.064.782-1.36c.324-.203.533-.364.682-.556a2 2 0 0 0 .399-1.479c-.053-.394-.287-.798-.757-1.605s-.704-1.21-1.022-1.453a2.03 2.03 0 0 0-1.49-.396c-.242.032-.487.13-.825.308a1.64 1.64 0 0 1-1.58-.008a1.62 1.62 0 0 1-.795-1.353c-.015-.38-.051-.64-.145-.863a2 2 0 0 0-1.09-1.083"
+                            clip-rule="evenodd" opacity=".5"></path>
+                        <path fill="currentColor"
+                            d="M15.523 12c0 1.657-1.354 3-3.023 3s-3.023-1.343-3.023-3S10.83 9 12.5 9s3.023 1.343 3.023 3">
+                        </path>
+                    </svg>
+                    <span class="text">Settings</span>
+                </a>
+            </li> -->
+      <li>
+        <a class="logout">
+          <i class='bx bx-power-off bx-sm bx-burst-hover'></i>
+          <span class="text">Logout</span>
+        </a>
+      </li>
+    </ul>
+  </section>
+  <!-- SIDEBAR -->
+
+
+
+  <!-- CONTENT -->
+  <section id="content">
+    <!-- NAVBAR -->
+    <nav>
+
+      <svg class='bx bx-menu bx-sm' xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+        <path fill="currentColor" d="M6.25 19a.75.75 0 0 0 1.32.488l6-7a.75.75 0 0 0 0-.976l-6-7A.75.75 0 0 0 6.25 5z"
+          opacity=".5">
+        </path>
+        <path fill="currentColor" fill-rule="evenodd"
+          d="M10.512 19.57a.75.75 0 0 1-.081-1.058L16.012 12l-5.581-6.512a.75.75 0 1 1 1.139-.976l6 7a.75.75 0 0 1 0 .976l-6 7a.75.75 0 0 1-1.058.082"
+          clip-rule="evenodd"></path>
+      </svg>
+      <div class="sign-in-box">
+
+      <!-- Notification Bell -->
+      <a class="notification" id="notificationIcon">
+        <!-- <i class='bx bxs-bell bx-tada-hover'></i> -->
+        <svg class='bx bxs-bell bx-tada-hover' xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+          viewBox="0 0 24 24">
+          <path fill="currentColor"
+            d="M18.75 9v.704c0 .845.24 1.671.692 2.374l1.108 1.723c1.011 1.574.239 3.713-1.52 4.21a25.8 25.8 0 0 1-14.06 0c-1.759-.497-2.531-2.636-1.52-4.21l1.108-1.723a4.4 4.4 0 0 0 .693-2.374V9c0-3.866 3.022-7 6.749-7s6.75 3.134 6.75 7"
+            opacity=".5"></path>
+          <path fill="currentColor"
+            d="M12.75 6a.75.75 0 0 0-1.5 0v4a.75.75 0 0 0 1.5 0zM7.243 18.545a5.002 5.002 0 0 0 9.513 0c-3.145.59-6.367.59-9.513 0">
+          </path>
+        </svg>
+        <span class="num">8</span>
+      </a>
+      <div class="notification-menu" id="notificationMenu">
+        <ul>
+          <li>New message from John</li>
+          <li>Your order has been shipped</li>
+          <li>New comment on your post</li>
+          <li>Update available for your app</li>
+          <li>Reminder: Meeting at 3PM</li>
+        </ul>
+      </div>
+
+      <!-- Profile Menu -->
+      <a class="profile" id="profileIcon">
+        <img src="https://cdn-icons-png.flaticon.com/512/8792/8792047.png" alt="Profile">
+      </a>
+      <div class="profile-menu" id="profileMenu">
+        <ul>
+          <li><a>My Profile</a></li>
+          <li><a>Settings</a></li>
+          <li><a>Log Out</a></li>
+        </ul>
+      </div>
+      </div>
+    </nav>
+    <!-- NAVBAR -->
+
+
+    <!-- MAIN -->
+    <main>
+      <!-- <div class="head-title">
+                <div class="left">
+                    <h1>Dashboard</h1>
+                    <ul class="breadcrumb">
+                        <li>
+                            <a>Dashboard</a>
+                        </li>
+                        <li><i class='bx bx-chevron-right'></i></li>
+                        <li>
+                            <a class="active">Home</a>
+                        </li>
+                    </ul>
+                </div>
+                <a class="btn-download">
+                    <i class='bx bxs-cloud-download bx-fade-down-hover'></i>
+                    <span class="text">Get PDF</span>
+                </a>
+            </div> -->
+
+      <ul class="box-info">
+
+        <li>
+          <div class="bx">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+              <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="1.5"
+                d="M21.984 10c-.037-1.311-.161-2.147-.581-2.86c-.598-1.015-1.674-1.58-3.825-2.708l-2-1.05C13.822 2.461 12.944 2 12 2s-1.822.46-3.578 1.382l-2 1.05C4.271 5.56 3.195 6.125 2.597 7.14C2 8.154 2 9.417 2 11.942v.117c0 2.524 0 3.787.597 4.801c.598 1.015 1.674 1.58 3.825 2.709l2 1.049C10.178 21.539 11.056 22 12 22s1.822-.46 3.578-1.382l2-1.05c2.151-1.129 3.227-1.693 3.825-2.708c.42-.713.544-1.549.581-2.86M21 7.5l-4 2M12 12L3 7.5m9 4.5v9.5m0-9.5l4.5-2.25l.5-.25m0 0V13m0-3.5l-9.5-5">
+              </path>
+            </svg>
+          </div>
+          <span class="text">
+            <h3>1020</h3>
+            <p>Total Product Items</p>
+          </span>
+        </li>
+        <li>
+          <div class="bx">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+              <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="1.5"
+                d="M19 10h-8m-6 0h2m-2 8h8m6 0h-2m2-4H5m14-8H5"></path>
+            </svg>
+          </div>
+
+          <span class="text">
+            <h3>2834</h3>
+            <p>In Stock Product</p>
+          </span>
+        </li>
+        <li>
+          <div class="bx">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+              <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="1.5">
+                <path d="m14 12l-4 4m0-4l4 4M9 6V5a3 3 0 1 1 6 0v1"></path>
+                <path
+                  d="M20.224 12.526c-.586-3.121-.878-4.682-1.99-5.604C17.125 6 15.537 6 12.36 6h-.72c-3.176 0-4.764 0-5.875.922s-1.403 2.483-1.989 5.604c-.823 4.389-1.234 6.583-.034 8.029S7.174 22 11.639 22h.722c4.465 0 6.698 0 7.897-1.445c.696-.84.85-1.93.696-3.555">
+                </path>
+              </g>
+            </svg>
+          </div>
+          <span class="text">
+            <h3>231 (Items)</h3>
+            <p>Out Of Stock Product</p>
+          </span>
+        </li>
+        <li>
+          <div class="bx">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+              <g fill="none" stroke="currentColor" stroke-width="1.5">
+                <circle cx="12" cy="6" r="4"></circle>
+                <path stroke-linecap="round"
+                  d="M18 9c1.657 0 3-1.12 3-2.5S19.657 4 18 4M6 9C4.343 9 3 7.88 3 6.5S4.343 4 6 4m11.197 11c.51.588.803 1.271.803 2c0 2.21-2.686 4-6 4s-6-1.79-6-4s2.686-4 6-4q.511 0 1 .055M20 19c1.754-.385 3-1.359 3-2.5s-1.246-2.115-3-2.5M4 19c-1.754-.385-3-1.359-3-2.5s1.246-2.115 3-2.5">
+                </path>
+              </g>
+            </svg>
+          </div>
+          <span class="text">
+            <h3>1020</h3>
+            <p>Total Visited Customer</p>
+          </span>
+        </li>
+      </ul>
+
+
+      <div class="table-data">
+        <div class="order">
+          <div class="head">
+            <h3>Recent Orders</h3>
+            <form>
+              <div class="form-input"><input type="search" placeholder="Search..."><button type="submit"
+                  class="search-btn"><i class="bx bx-search"></i></button></div>
+            </form>
+
+          </div>
+          <div class="overflow-auto pr-1 relative h-[calc(100dvh_-_375px)]">
+            <table>
+              <thead class="text-xs border-b uppercase text-gray-500 bg-gray-50 z-10 top-0 sticky p-2">
+                <tr>
+                  <th>Customer Name</th>
+                  <th>Order ID</th>
+                  <th>Order Date</th>
+                  <th>Items Count</th>
+                  <th>Email ID</th>
+
+                  <th>Status</th>
+                  <th>Total Amount</th>
+                 
+                  <th>Action</th>
+                </tr>
+              </thead>
+
+              <tbody>
+
+                <tr *ngFor="let item of [1,2,3,4,5,6,7,8,9,10]">
+
+                  <td>
+                    <img src="https://cdn-icons-png.flaticon.com/512/8792/8792047.png">
+                    <p>Micheal John</p>
+                  </td>
+                  <td>#583488/80</td>
+                  <td>18-10-2021</td>
+                  <td>18</td>
+                  <td>anna.hinesmail.com</td>
+
+                  <td><span class="status completed">Completed</span></td>
+
+                  <td>$987.00</td>
+
+                 
+                  <td>
+                    <div class="inline-flex gap-2">
+                      <a href="#!" class="btn btn-light"><svg xmlns="http://www.w3.org/2000/svg" width="1em"
+                          height="1em" viewBox="0 0 24 24">
+                          <g fill="none" stroke="currentColor" stroke-width="1.5">
+                            <path stroke-linecap="round"
+                              d="M9 4.46A9.8 9.8 0 0 1 12 4c4.182 0 7.028 2.5 8.725 4.704C21.575 9.81 22 10.361 22 12c0 1.64-.425 2.191-1.275 3.296C19.028 17.5 16.182 20 12 20s-7.028-2.5-8.725-4.704C2.425 14.192 2 13.639 2 12c0-1.64.425-2.191 1.275-3.296A14.5 14.5 0 0 1 5 6.821">
+                            </path>
+                            <path d="M15 12a3 3 0 1 1-6 0a3 3 0 0 1 6 0Z"></path>
+                          </g>
+                        </svg></a>
+                      <a href="#!" class="btn btn-soft-primary"><svg xmlns="http://www.w3.org/2000/svg" width="1em"
+                          height="1em" viewBox="0 0 24 24">
+                          <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="1.5"
+                            d="M4 22h4m12 0h-8m1.888-18.337l.742-.742a3.146 3.146 0 1 1 4.449 4.45l-.742.74m-4.449-4.448s.093 1.576 1.483 2.966s2.966 1.483 2.966 1.483m-4.449-4.45L7.071 10.48c-.462.462-.693.692-.891.947a5.2 5.2 0 0 0-.599.969c-.139.291-.242.601-.449 1.22l-.875 2.626m14.08-8.13L14.93 11.52m-3.41 3.41c-.462.462-.692.692-.947.891q-.451.352-.969.599c-.291.139-.601.242-1.22.448l-2.626.876m0 0l-.641.213a.848.848 0 0 1-1.073-1.073l.213-.641m1.501 1.5l-1.5-1.5">
+                          </path>
+                        </svg></a>
+                      <a href="#!" class="btn btn-soft-danger"><svg xmlns="http://www.w3.org/2000/svg" width="1em"
+                          height="1em" viewBox="0 0 24 24">
+                          <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-width="1.5"
+                            d="M20.5 6h-17m5.67-2a3.001 3.001 0 0 1 5.66 0m3.544 11.4c-.177 2.654-.266 3.981-1.131 4.79s-2.195.81-4.856.81h-.774c-2.66 0-3.99 0-4.856-.81c-.865-.809-.953-2.136-1.13-4.79l-.46-6.9m13.666 0l-.2 3">
+                          </path>
+                        </svg></a>
+                    </div>
+                  </td>
+                </tr>
+
+              </tbody>
+
+            </table>
+          </div>
+        </div>
+
+      </div>
+      
+    </main>
+    <!-- MAIN -->
+  </section>
+  <!-- CONTENT -->
+</div>
