--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -170,9 +170,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Events/2.png"
-                                alt="">
+                              <img src="../../../assets/Events/2.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -191,9 +189,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Events/3.png"
-                                alt="">
+                              <img src="../../../assets/Events/3.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -212,9 +208,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Events/4.png"
-                                alt="">
+                              <img src="../../../assets/Events/4.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -233,8 +227,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img src="../../../assets/Events/5.png"
-                                alt="">
+                              <img src="../../../assets/Events/5.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -253,9 +246,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Events/6.png"
-                                alt="">
+                              <img src="../../../assets/Events/6.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -272,7 +263,7 @@
                   </div>
                 </div>
                 <div role="tabpanel" class="tab-pane" id="profile">
-                   <div class="row">
+                  <div class="row">
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
                         <div class="card-inner" (click)="gotoevent()">
@@ -298,9 +289,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/1.png"
-                                alt="">
+                              <img src="../../../assets/Services/1.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -314,15 +303,13 @@
 
                       </div>
                     </div>
-                    
+
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/5.png"
-                                alt="">
+                              <img src="../../../assets/Services/5.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -341,9 +328,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/2.png"
-                                alt="">
+                              <img src="../../../assets/Services/2.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -362,8 +347,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img src="../../../assets/Services/3.png"
-                                alt="">
+                              <img src="../../../assets/Services/3.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -382,9 +366,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/4.png"
-                                alt="">
+                              <img src="../../../assets/Services/4.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -398,8 +380,6 @@
 
                       </div>
                     </div>
-                  </div>
-                  <div class="row collapse" id="veg">
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
                         <div class="card-inner" (click)="gotoevent()">
@@ -425,9 +405,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/8.png"
-                                alt="">
+                              <img src="../../../assets/Services/8.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -441,21 +419,19 @@
 
                       </div>
                     </div>
-                    
+
                     <div class="col-xl-3 col-lg-3 col-md-4 col-sm-4">
                       <div class="Product-Card">
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/9.png"
-                                alt="">
+                              <img src="../../../assets/Services/9.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
                             <p class="tag color-two">
 
-                              <span>⁠Decorators/ Decoration</span>
+                              <span>⁠Decoration</span>
                             </p>
 
                           </div>
@@ -468,9 +444,7 @@
                         <div class="card-inner" (click)="gotoevent()">
                           <div class="image-area">
                             <a>
-                              <img
-                                src="../../../assets/Services/6.png"
-                                alt="">
+                              <img src="../../../assets/Services/6.png" alt="">
                             </a>
                           </div>
                           <div class="blog-content">
@@ -484,12 +458,9 @@
 
                       </div>
                     </div>
-                    
                   </div>
-                  <div class="col-md-12 show-more-btn mx-auto text-center mt-5 cont-sec">
-                      <a class="bhagona-btn-2" data-toggle="collapse" data-target="#veg">Show More</a>
-                      <a class="bhagona-btn-2">continue </a>
-                    </div>
+
+
                 </div>
 
               </div>
@@ -508,7 +479,7 @@
 
 
 
-  <footer class="footer-section">
+  <footer class="footer-section" style="display: none;">
     <div class="container">
       <div class="footer-cta pt-5 pb-5">
         <div class="row">
