--- a/src/global.scss
+++ b/src/global.scss
@@ -3103,6 +3103,7 @@ section-title {
   background: #031119;
   position: relative;
   z-index: 1;
+  margin-bottom: 100px;
 }
 .bg_color-dark-1::after{
   content: "";
